<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/value_13"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_stroke_bg"
            android:elevation="@dimen/value_2"
            android:orientation="vertical"
            android:padding="@dimen/value_10">

            <TextView
                style="@style/txt_primary_text_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/value_5"
                android:text="@string/personnel"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/value_10"
                android:layout_marginLeft="@dimen/value_10"
                android:layout_marginRight="@dimen/value_10"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/etFullName"
                    style="@style/txt_light_blue_tex_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/value_5"
                    android:background="@drawable/gray_stroke_bg"
                    android:hint="@string/fullname"
                    android:padding="@dimen/value_13" />

                <EditText
                    android:id="@+id/etHouseNo"
                    style="@style/txt_light_blue_tex_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/value_12"
                    android:background="@drawable/gray_stroke_bg"
                    android:hint="@string/houseno"
                    android:padding="@dimen/value_13" />

                <EditText
                    android:id="@+id/etStreetName"
                    style="@style/txt_light_blue_tex_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/value_12"
                    android:background="@drawable/gray_stroke_bg"
                    android:hint="@string/streetname"
                    android:padding="@dimen/value_13" />

                <EditText
                    android:id="@+id/etLandMark"
                    style="@style/txt_light_blue_tex_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/value_10"
                    android:layout_marginTop="@dimen/value_12"
                    android:background="@drawable/gray_stroke_bg"
                    android:hint="@string/landmark"
                    android:padding="@dimen/value_13" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_12"
            android:background="@drawable/gray_stroke_bg"
            android:elevation="@dimen/value_2"
            android:orientation="vertical"
            android:padding="@dimen/value_5">

            <TextView
                style="@style/txt_primary_text_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/value_10"
                android:text="@string/location"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/value_10"
                android:layout_marginLeft="@dimen/value_10"
                android:layout_marginRight="@dimen/value_10"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/value_5"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etPincode"
                        style="@style/txt_light_blue_tex_14"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="@drawable/gray_stroke_bg"
                        android:hint="@string/pincode"
                        android:maxLength="6"
                        android:padding="@dimen/value_13" />

                    <EditText
                        android:id="@+id/etPlace"
                        style="@style/txt_light_blue_tex_14"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/value_15"
                        android:layout_weight="0.5"
                        android:background="@drawable/gray_stroke_bg"
                        android:hint="@string/place"
                        android:padding="@dimen/value_13" />
                </LinearLayout>


                <TextView
                    android:id="@+id/tvState"
                    style="@style/txt_light_blue_tex_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/value_12"
                    android:background="@drawable/gray_stroke_bg"
                    android:drawableRight="@drawable/ic_keyboard_arrow_down_primary"
                    android:gravity="left|center"
                    android:padding="@dimen/value_13"
                    android:text="@string/state" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/value_10"
                    android:layout_marginTop="@dimen/value_12"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDistrict"
                        style="@style/txt_light_blue_tex_14"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.5"
                        android:background="@drawable/gray_stroke_bg"
                        android:drawableRight="@drawable/ic_keyboard_arrow_down_primary"
                        android:gravity="left|center"
                        android:padding="@dimen/value_13"
                        android:text="@string/district" />

                    <TextView
                        android:id="@+id/tvBlock"
                        style="@style/txt_light_blue_tex_14"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/value_15"
                        android:layout_weight="0.5"
                        android:background="@drawable/gray_stroke_bg"
                        android:drawableRight="@drawable/ic_keyboard_arrow_down_primary"
                        android:gravity="left|center"
                        android:padding="@dimen/value_13"
                        android:text="@string/block" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_12"
            android:background="@drawable/gray_stroke_bg"
            android:elevation="@dimen/value_2"
            android:orientation="vertical"
            android:padding="@dimen/value_5">

            <TextView
                style="@style/txt_primary_text_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/value_10"
                android:text="@string/contact"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/value_10"
                android:layout_marginLeft="@dimen/value_10"
                android:layout_marginRight="@dimen/value_10"
                android:layout_marginTop="@dimen/value_5"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etEmailId"
                    style="@style/txt_light_blue_tex_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/gray_stroke_bg"
                    android:gravity="left|center"
                    android:hint="@string/email_id"
                    android:padding="@dimen/value_13" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/value_12"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/etSTdCode"
                        style="@style/txt_light_blue_tex_14"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="@drawable/gray_stroke_bg"
                        android:hint="@string/std_code"
                        android:padding="@dimen/value_13" />

                    <EditText
                        android:id="@+id/etPhoneNo"
                        style="@style/txt_light_blue_tex_14"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/value_15"
                        android:layout_weight="0.5"
                        android:background="@drawable/gray_stroke_bg"
                        android:hint="@string/phone_no"
                        android:padding="@dimen/value_13" />
                </LinearLayout>


                <EditText
                    android:id="@+id/etKeyContactPerson"
                    style="@style/txt_light_blue_tex_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/value_12"
                    android:background="@drawable/gray_stroke_bg"
                    android:gravity="left|center"
                    android:hint="@string/key_contact_person"
                    android:padding="@dimen/value_13" />

                <EditText
                    android:id="@+id/etMobileNo"
                    style="@style/txt_light_blue_tex_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/value_10"
                    android:layout_marginTop="@dimen/value_12"
                    android:background="@drawable/gray_stroke_bg"
                    android:gravity="left|center"
                    android:hint="@string/mobile_no"
                    android:padding="@dimen/value_13" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/value_25"
            android:layout_marginTop="@dimen/value_15">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/value_30"
                android:layout_weight="0.8"
                android:gravity="center">

                <View
                    android:layout_width="@dimen/value_20"
                    android:layout_height="@dimen/value_20"
                    android:layout_marginLeft="@dimen/value_5"
                    android:background="@drawable/circleiconon" />

                <View
                    android:layout_width="@dimen/value_20"
                    android:layout_height="@dimen/value_20"
                    android:layout_marginLeft="@dimen/value_5"
                    android:background="@drawable/cirle_holo" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvNext"
                style="@style/txt_primary_text_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableRight="@drawable/ic_next"
                android:gravity="center"
                android:text="@string/next"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>